Resolves #22 fix line breaks in angular code

--- a/src/Mayflower/JiraIssueVoteBundle/Resources/public/css/site.css
+++ b/src/Mayflower/JiraIssueVoteBundle/Resources/public/css/site.css
@@ -106,6 +106,10 @@ label small {
     width: 83.333333333%
 }
 
+.issue-description {
+    white-space: pre-wrap;
+}
+
 /* movile customizations */
 @media screen and (max-width:974px){
     .vote-box {
